@@ -1,3 +1,8 @@
+2021-09-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bug-3282.c:
+	  Test for bug #3282.
+
 2021-09-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/ralloc2.cc,
